--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.woailqw.elasticsearch</groupId>
+  <groupId>com.lczyfz.elasticsearch</groupId>
   <artifactId>esay-elasticsearch-client</artifactId>
-  <version>0.01-SNAPSHOT</version>
+  <version>1.04-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
@@ -200,14 +200,14 @@
       </build>
     </profile>
   </profiles>
-<!--  <distributionManagement>-->
-<!--    <repository>-->
-<!--      <id>oss.sonatype.org</id>-->
-<!--      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
-<!--    </repository>-->
-<!--    <snapshotRepository>-->
-<!--      <id>oss.sonatype.org</id>-->
-<!--      <url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
-<!--    </snapshotRepository>-->
-<!--  </distributionManagement>-->
+  <distributionManagement>
+    <repository>
+      <id>releases</id>
+      <url>http://192.168.103.16:8081/nexus/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <url>http://192.168.103.16:8081/nexus/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
